--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,50 +1,81 @@
-<h1>Burger Time!</h1>
 
-<h2> Burger Hit List!</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div id="title">
+                <h1>Burger Time!</h1>
+            </div>
+        </div>    
+    </div>
 
-<ul>
-    {{#each burgers}}
-        {{#unless this.devoured }}
-        <li>    
-            {{this.burger_name}}
+<div class="row">
+    <div class="col-md-4">
+        <div id="burgHit">
 
-            <form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
-                <input type="hidden" name="devoured" value="true">
-                <button type="submit">Devour!</button>
+        <h2> Burger Hit List!</h2>
+
+        <ul>
+            {{#each burgers}}
+                {{#unless this.devoured }}
+                <li>    
+                    {{this.burger_name}}
+
+                    <form action="burgers/{{this.id}}?_method=PUT" method="POST">
+                        <input type="hidden" name="devoured" value="true">
+                        <button type="submit">Devour!</button>
+                    </form>
+                
+                </li>
+                {{/unless}}
+            {{/each}}            
+        </ul>
+        </div>
+    </div>
+
+    <div class="col-md-4">
+        <img id="pic" src="https://images.unsplash.com/photo-1534790566855-4cb788d389ec?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80">
+    </div>
+
+    <div class="col-md-4">
+        <div id="burgEat">
+
+        <h2> Burgers You have devoured!</h2>
+
+        <ul>
+            {{#each burgers}}
+                {{#if devoured }}
+                    <li>    
+                    {{this.burger_name}}
+
+                    <form action="burgers/{{this.id}}?_method=PUT" method="POST">
+                        <input type="hidden" name="devoured" value="false">
+                        <button type="submit">regurgitate!</button>
+                    </form>
+                
+                </li>
+                {{/if}}
+            {{/each}}            
+        </ul>
+
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <div id="burgerAdd">
+        <div id="input">
+            <h2>Add a burger:</h2>
+            <form class="create-update-form" action="burgers/create" method="POST">
+
+            <div class="form-group">
+                <label for="ca">Burger Name:</label>
+                <input type="text" id="ca" name="burger_name">
+            </div>
+
+            <button id="add-burger-button" type="submit">Add Burger</button>
             </form>
-        
-        </li>
-        {{/unless}}
-    {{/each}}            
-</ul>
-
-
-<h2> Burgers You have devoured!</h2>
-
-<ul>
-    {{#each burgers}}
-        {{#if devoured }}
-            <li>    
-            {{this.burger_name}}
-
-            <form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
-                <input type="hidden" name="devoured" value="true">
-                <button type="submit">Devour!</button>
-            </form>
-        
-        </li>
-        {{/if}}
-    {{/each}}            
-</ul>
-
-<form class="burger-form">
-
-  <div class="form-group">
-    <label for="burg">Burger Name:</label>
-    <input type="text" id="burg" name="name">
-  </div>
-
-  <button type="submit">Add Burger</button>
-
-</form>
-
+        </div>
+        </div>
+    </div>    
+</div>
+</div>
