--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -2,20 +2,48 @@ body {
     background-color: lightblue;
 }
 
-button {
-    background-color:green;
+.container {
+    background-color: lightcyan;
+    font-family: 'Orbitron', sans-serif;
 }
+
+
+.hd {
+    padding:10px;
+    
+}
+
+button {
+    border:2px solid blue;
+    border-radius:20px;
+    box-shadow: 5px 5px 5px rgba(0,0,0,.5);
+    transition: box-shadow .5s;
+    color:blue;
+}
+
+
+button:hover{
+    box-shadow: 15px 15px 15px rgba(0,0,0,.5);
+    cursor:pointer;
+    color:darkorange;
+  }
 #title {
     text-align:center;
     margin-top:25px;
     margin-bottom:20px;
+    
+}
+
+h4{
+    color: darkorange;
 }
 ul {
     list-style-type:none;
 }
 
 li{
-    background-color:white;
+    border-bottom:10px;
+    border-top:10px;
 }
 #burgHit, #burgEat{
     text-align:center;
@@ -24,6 +52,8 @@ li{
 #burgerHit {
     
 }
+
+
 #pic{
    
     width:100%;
@@ -34,7 +64,19 @@ li{
    
 }
 
-#burgerAdd{
-    text-align:center;
+.createBurg{
+   
+
+   
 }
 
+#burgerAdd{
+    padding-top:25px;
+    text-align:center;
+    padding-bottom:75px;
+}
+
+#footie {
+    background-color:lightsalmon;
+    height:50px;
+}
